rpi5/readarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  serviceName: readarr
  template:
    metadata:
      name: readarr
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: lscr.io/linuxserver/readarr:develop@sha256:b80e1b2d75e294e60daeb2a0e1783ea33a67a36d0065632c8472284317bd7cf8
          imagePullPolicy: Always
          ports:
            - containerPort: 8787
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 8787
              path: /ping
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8787
              path: /ping
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /data
            server: 192.168.1.52
            readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
