rpi5/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8787
  type: ClusterIP
